@@ -113,7 +113,7 @@ void vt_drcs_add_glyph(vt_drcs_font_t *font, int idx, const char *seq, u_int wid
   }
 }
 
-void vt_drcs_add_picture(vt_drcs_font_t *font, int id, int offset, int beg_idx,
+void vt_drcs_add_picture(vt_drcs_font_t *font, int id, u_int offset, int beg_idx,
                          u_int num_cols, u_int num_rows,
                          u_int num_cols_small, u_int num_rows_small) {
   if (num_cols > UINT16_MAX || num_rows > UINT16_MAX) {
@@ -185,7 +185,7 @@ int vt_convert_unicode_pua_to_drcs(ef_char_t *ch) {
 
     c[0] = c[3];
     ch->size = 1;
-    ch->property = 0;
+    ch->property = 0; /* Ignore EF_AWIDTH */
 
     return 1;
   }
