@@ -1,3 +1,13 @@
+2018-01-07  Araki Ken  <arakiken@users.sf.net>
+
+	* ui_picture.c: cleanup_inline_pictures() checks DRCS-SIXEL.
+
+	* vt_drcs.h: vt_drcs_has_picture() is added.
+
+	* vt_pty.c: vt_pty_new_with() doesn't call vt_config_menu_init() if pty is NULL.
+
+	* quartz/ui_imagelib.c: ui_imagelib_load_file() resizes a loaded image.
+
 2018-01-06  Araki Ken  <arakiken@users.sf.net>
 
 	* gdiplus.cpp: Sixel graphics is resized to specified width and height.
